--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -8,10 +8,12 @@
 	"private": false,
 	"scripts": {
 		"start": "node index.js",
-		"start:dev": "nodemon index.js"
+		"start:dev": "nodemon index.js",
+		"test": "jest --verbose"
 	},
 	"devDependencies": {
 		"dotenv": "^8.2.0",
+		"jest": "^26.6.3",
 		"nodemon": "^2.0.6"
 	},
 	"dependencies": {
